--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
      <meta charset="UTF-8">
      <title>市川天文台-ichiten-</title>
 
-    <link href="style.css" rei="styriesheet"
+
+    <link href="style.css" rei="stylesheet" />
 </head>
 <body>
 　　<h1>市川天文台</h1>
