--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-     <meta charset="UTF-8">
-     <title>市川天文台-ichiten-</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>市川天文台-ichiten-</title>
 
 
-    <link href="style.css" rei="stylesheet" />
-</head>
-<body>
-　　<h1>市川天文台</h1>
-　　<img src="main_pic.png" ait="市川天文台の写真"
-　　<h2>宇宙を探す</h2>
-   <p>一緒に宇宙を観察してみましょう
-    　　<br>
-      利用案内
-   </p>
-   <h2>イベントスケジュール</h2>
-   <u1>
-       <l1>星空観察会</l1>
-       <l1>館長の話を聞く会</l1>
-    </u1>
-    <p>申し込みは下記フォームから</p>
-    <h6>この天文台は実在しません</h6>
-</body>
+        <link href="style.css" rei="stylesheet" />
+    </head>
+    <body>
+        <h1>市川天文台</h1>
+        <img src="main_pic.png" ait="市川天文台の写真" />
+        <h2>宇宙を探す</h2>
+        <p>一緒に宇宙を観察してみましょう
+            <br>
+            利用案内
+        </p>
+        <h2>イベントスケジュール</h2>
+        <u1>
+            <l1>星空観察会</l1>
+            <l1>館長の話を聞く会</l1>
+        </u1>
+        <p>申し込みは下記フォームから</p>
+        <h6>この天文台は実在しません</h6>
+    </body>
 </html>
