--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>市川天文台-ichiten-</title>
 
-
         <link href="style.css" rei="stylesheet" />
     </head>
     <body>
@@ -21,6 +20,9 @@
             <l1>館長の話を聞く会</l1>
         </u1>
         <p>申し込みは下記フォームから</p>
+
+        <button type="button">申し込みはこちら</button>
+
         <h6>この天文台は実在しません</h6>
     </body>
 </html>
