--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>市川天文台-ichiten-</title>
 
-        <link href="style.css" rei="stylesheet" />
+         <link href="style.css" rei="stylesheet" />
     </head>
     <body>
         <h1>市川天文台</h1>
@@ -21,7 +21,7 @@
         </u1>
         <p>申し込みは下記フォームから</p>
 
-        <button type="button">申し込みはこちら</button>
+        <button onclick="location.htef='index.html'">もどる</button>申し込みはこちら</button>
 
         <h6>この天文台は実在しません</h6>
     </body>
