--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </u1>
         <p>申し込みは下記フォームから</p>
 
-        <button onclick="location.htef='index.html'">もどる</button>申し込みはこちら</button>
+        <button onclick="location.href=location`./app.html`">申し込みはこちら</button>
 
         <h6>この天文台は実在しません</h6>
     </body>
